[gd_scene load_steps=9 format=3 uid="uid://crq1iw7ibn03k"]

[ext_resource type="Script" path="res://scenes/card_list_row.gd" id="1_kkh0b"]
[ext_resource type="Texture2D" uid="uid://idg0cq5nyt80" path="res://sprites/card_images_baked/SYS/unknown.png" id="2_wagrd"]
[ext_resource type="FontFile" uid="uid://ng1y54e8x08v" path="res://fonts/Roboto/Roboto-Bold.ttf" id="3_e3c87"]
[ext_resource type="PackedScene" uid="uid://g7yv71p73utl" path="res://objects/attribute.tscn" id="3_uw5cg"]

[sub_resource type="LabelSettings" id="LabelSettings_6mx1x"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_caajq"]
font_color = Color(0.545098, 0.972549, 0.976471, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6p714"]
font_color = Color(0.980392, 0.521569, 0.501961, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_soqfh"]
size = Vector2(381, 129)

[node name="CardListRow" type="Node2D"]
script = ExtResource("1_kkh0b")

[node name="Panel" type="Panel" parent="."]
offset_right = 381.0
offset_bottom = 129.0
mouse_default_cursor_shape = 2

[node name="Picture" type="Sprite2D" parent="Panel"]
position = Vector2(44, 64)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_wagrd")

[node name="Name" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 6.0
offset_right = 373.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "Card Name"
label_settings = SubResource("LabelSettings_6mx1x")
clip_text = true
text_overrun_behavior = 3

[node name="Attribute" parent="Panel" instance=ExtResource("3_uw5cg")]
position = Vector2(106, 63)
scale = Vector2(0.2, 0.2)

[node name="Type" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 49.0
offset_right = 349.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "Battle"
label_settings = SubResource("LabelSettings_6mx1x")
clip_text = true
text_overrun_behavior = 3

[node name="TypeBattle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 127.0
offset_top = 49.0
offset_right = 386.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "Battle"
label_settings = SubResource("LabelSettings_6mx1x")
clip_text = true
text_overrun_behavior = 3

[node name="HP" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 80.0
offset_right = 72.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = " HP"
label_settings = SubResource("LabelSettings_caajq")
clip_text = true
text_overrun_behavior = 3

[node name="HPValue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 80.0
offset_right = 77.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "10 "
label_settings = SubResource("LabelSettings_caajq")
horizontal_alignment = 2
clip_text = true
text_overrun_behavior = 3

[node name="ATK" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 98.0
offset_right = 70.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = " ATK"
label_settings = SubResource("LabelSettings_6p714")
clip_text = true
text_overrun_behavior = 3

[node name="ATKValue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 98.0
offset_right = 77.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "10 "
label_settings = SubResource("LabelSettings_6p714")
horizontal_alignment = 2
clip_text = true
text_overrun_behavior = 3

[node name="Cost" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 93.0
offset_right = 174.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "Cost: 0"
label_settings = SubResource("LabelSettings_6mx1x")
clip_text = true
text_overrun_behavior = 3

[node name="Field" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 201.0
offset_top = 93.0
offset_right = 460.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("3_e3c87")
text = "Field:"
label_settings = SubResource("LabelSettings_6mx1x")
clip_text = true
text_overrun_behavior = 3

[node name="Field1" parent="Panel" instance=ExtResource("3_uw5cg")]
position = Vector2(277, 107)
scale = Vector2(0.15, 0.15)

[node name="Field2" parent="Panel" instance=ExtResource("3_uw5cg")]
position = Vector2(305, 107)
scale = Vector2(0.15, 0.15)

[node name="Field3" parent="Panel" instance=ExtResource("3_uw5cg")]
position = Vector2(333, 107)
scale = Vector2(0.15, 0.15)

[node name="Field4" parent="Panel" instance=ExtResource("3_uw5cg")]
position = Vector2(361, 107)
scale = Vector2(0.15, 0.15)

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(190.5, 64.5)
shape = SubResource("RectangleShape2D_soqfh")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
